--- a/package.json
+++ b/package.json
@@ -20,7 +20,11 @@
     "autoprefixer": "^10.4.4",
     "eslint": "8.12.0",
     "eslint-config-next": "12.1.1",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-tailwindcss": "^3.5.0",
     "postcss": "^8.4.12",
+    "prettier": "^2.6.1",
     "tailwindcss": "^3.0.23",
     "typescript": "4.6.3"
   }
