:rotating_light: Remove sort-imports from eslint config

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -13,7 +13,6 @@
     "tailwindcss/enforces-negative-arbitrary-values": "error",
     "tailwindcss/enforces-shorthand": "error",
     "tailwindcss/migration-from-tailwind-2": "error",
-    "tailwindcss/no-custom-classname": "error",
-    "sort-imports": "error"
+    "tailwindcss/no-custom-classname": "error"
   }
 }
