--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "eslint": "8.12.0",
     "eslint-config-next": "12.1.1",
     "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-tailwindcss": "^3.5.0",
     "postcss": "^8.4.12",
