--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,10 +1,13 @@
 {
+  "parser": "@typescript-eslint/parser",
   "extends": [
     "next/core-web-vitals",
+    "plugin:@typescript-eslint/recommended",
     "plugin:prettier/recommended",
     "plugin:tailwindcss/recommended"
   ],
   "plugins": [
+    "@typescript-eslint",
     "prettier",
     "tailwindcss"
   ],
@@ -28,12 +31,14 @@
       2,
       {
         "groups": [
-          "external",
           "builtin",
+          "external",
           "internal",
-          "sibling",
           "parent",
-          "index"
+          "sibling",
+          "index",
+          "object",
+          "type"
         ],
         "alphabetize": {
           "order": "asc",
