--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "12.1.1",
+    "next": "12.1.2",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
@@ -17,9 +17,11 @@
     "@types/node": "17.0.23",
     "@types/react": "17.0.43",
     "@types/react-dom": "17.0.14",
+    "@typescript-eslint/eslint-plugin": "^5.17.0",
+    "@typescript-eslint/parser": "^5.17.0",
     "autoprefixer": "^10.4.4",
     "eslint": "8.12.0",
-    "eslint-config-next": "12.1.1",
+    "eslint-config-next": "12.1.2",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-prettier": "^4.0.0",
@@ -27,6 +29,6 @@
     "postcss": "^8.4.12",
     "prettier": "^2.6.1",
     "tailwindcss": "^3.0.23",
-    "typescript": "4.6.3"
+    "typescript": "^4.6.3"
   }
 }
