--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,6 +8,7 @@
   ],
   "plugins": [
     "@typescript-eslint",
+    "import",
     "prettier",
     "tailwindcss"
   ],
@@ -16,7 +17,8 @@
       "error",
       {
         "singleQuote": true,
-        "jsxSingleQuote": true
+        "jsxSingleQuote": true,
+        "semi": false
       }
     ],
     "tailwindcss/classnames-order": "error",
